@@ -2,25 +2,31 @@ package com.mysite.sbb.answer;
 
 import com.mysite.sbb.question.Question;
 import com.mysite.sbb.question.QuestionService;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
+import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 
-@RequestMapping("/answer")
 @RequiredArgsConstructor
 @Controller
 public class AnswerController {
-    private final QuestionService questionService;
     private final AnswerService answerService;
+    private final QuestionService questionService;
 
-    @PostMapping("/create/{id}")
-    public String createAnswer(@PathVariable("id") Integer id,
-                               @RequestParam(value = "content") String content) {
+    @PostMapping("/answer/create/{id}")
+    public String create(Model model, @PathVariable Integer id, @Valid AnswerForm answerForm, BindingResult bindingResult) {
         Question question = questionService.getQuestion(id);
-        answerService.create(question, content);
-        return String.format("redirect:/question/detail/%d", id);
+
+        if (bindingResult.hasErrors()) {
+            model.addAttribute("question", question);
+            return "question_detail";
+        }
+
+        answerService.create(question, answerForm.getContent());
+
+        return "redirect:/question/detail/%d".formatted(id);
     }
 }
